Bug 216499 - Home page font scaling not working
Summary: Home page font scaling not working
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-28 13:15 UTC by David Houlden
Modified: 2010-01-13 02:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2009-11-28 13:15:41 UTC
Version:            (using KDE 4.3.3)
OS:                Linux

The settings option to scale the homepage fonts does not work. The font on the home page summary is very big compared to the other screens.
Comment 1 Alvaro Soliverez 2009-11-29 00:38:35 UTC
The code is there. I reported an error on the khtmlPart. Bug 216582
Comment 2 uetsah 2010-01-12 21:57:32 UTC
Is this meant to be fixed now, or not?

I still have the exact same problem with KMyMoney 3.95.0-svn1073343 (most recent svn checkout!) on KDE 4.4 RC1... :-(
Comment 3 uetsah 2010-01-12 22:01:16 UTC
Sorry, my bad, it does in fact work... (Ignore my previous comment!)

(However: Why does that page it not use the system font size or the size specified in Configure>>Fonts, in the first place? Why do I need to specify a zoom factor of 65 to get the same font size as the UI elements?)
Comment 4 KMyMoney Devel Mailing List 2010-01-13 02:31:30 UTC
It uses the default KHTML font size. So, it should be the same size as your default font size in Konqueror.